# jsonfield

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGES  CHANGES.rst  Dockerfile  LICENSE  MANIFEST.in  README  README.md  README.rst  docker-compose.yml  fields.py  manage.py  pyproject.toml  settings.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: main.yml
demo/: models.py
demo/migrations/: 0001_initial.py
jsonfield/: .fields.py.swp  __init__.py  apps.py  encoder.py  fields.py  forms.py  subclassing.py  tests.py
jsonfield/tests/: apps.py  models.py  tests.py
migration-example/: manage.py
migration-example/src/: settings.py
migration-example/src/alterfield/: models.py
migration-example/src/alterfield/migrations/: 0001_initial.py  0002_alter_alterfieldmodel_data.py
migration-example/src/datamigration/: models.py
migration-example/src/datamigration/migrations/: 0001_initial.py  0002_rename_data_datamigationmodel_old_data.py
migration-example/tests/: test_migrated_apps.py
nosj/: fields.py
src/jsonfield/: __init__.py  fields.py  forms.py
tests/: models.py  settings.py  test_fields.py  test_forms.py  test_jsonfield.py
tests/migrations/: 0001_initial.py
